--- a/src/index.css
+++ b/src/index.css
@@ -53,11 +53,11 @@ button.add_expense_button {
 }
 
 .expense_summary .expense_summary_content {
-  @apply w-full pb-4;
+  @apply w-full pb-4 h-full;
 }
 
 .expense_summary .expense_summary_content_layout {
-  @apply flex w-full flex-col items-start justify-start;
+  @apply flex w-full flex-col items-start justify-start h-full;
 }
 
 .expense_summary .expense_summary_header {
@@ -145,4 +145,13 @@ button.add_expense_button {
 
 .expense_table_row {
   @apply hover:bg-transparent transition-colors duration-200;
+}
+
+.expense_table_cell.not-found {
+  @apply text-gray-500 text-sm font-medium;
+  @apply py-4 px-2 text-center;
+}
+
+.subtitle {
+  @apply text-neutral-500 text-sm font-medium;
 }
